--- a/index.Rmd
+++ b/index.Rmd
@@ -10,6 +10,7 @@ biblio-style: apalike
 link-citations: yes
 github-repo: rstudio/bookdown-demo
 description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
+lang: es
 ---
 
 # Instalaciones
