--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -1,21 +1,476 @@
 # Introduction {#intro}
 
-You can label chapter and section titles using `{#label}` after them, e.g., we can reference Chapter \@ref(intro). If you do not manually label them, there will be automatic labels anyway, e.g., Chapter \@ref(methods).
 
-Figures and tables with captions will be placed in `figure` and `table` environments, respectively.
 
-```{r nice-fig, fig.cap='Here is a nice figure!', out.width='80%', fig.asp=.75, fig.align='center'}
-par(mar = c(4, 4, .1, .1))
-plot(pressure, type = 'b', pch = 19)
+## Teoría asintótica clásica y las distribuciones extremales y sus dominios de atracción
+```{r}
+library(evd)
 ```
 
-Reference a figure by its code chunk label with the `fig:` prefix, e.g., see Figure \@ref(fig:nice-fig). Similarly, you can reference tables generated from `knitr::kable()`, e.g., see Table \@ref(tab:nice-tab).
+Siguiendo a @notas_curso
+ se dice que tenemos datos extremos cuando cada
+dato corresponde al máximo o mínimo de varios
+registros. Son un caso particular de evento raro o gran 
+desviación respecto a la media.
 
-```{r nice-tab, tidy=FALSE}
-knitr::kable(
-  head(iris, 20), caption = 'Here is a nice table!',
-  booktabs = TRUE
-)
+Asumiremos que nuestros datos son $iid$
+(independientes e idénticamente distribuidos, son
+dos suposiciones juntas). Esta doble suposición
+suele no ser realista en aplicaciones concretas
+(ninguna de sus dos componentes, incluso) pero
+para comenzar a entender la teoría clásica, la
+utilizaremos por un tiempo.
+
+Si tenemos datos $X_1,...,X_n$ $iid$
+con distribución $F$, entonces $X_n^* = max (X_1,...,X_n)$ tiene distribución $F_n^*$ dada por
+$F_n^* (t)= F(t)_n$. Si conocemos la distribución $F$ conoceríamos la 
+distribución $F_n^*$
+, pero en algunos casos la lectura 
+que queda registrada es la del dato máximo y no la 
+de cada observación que dio lugar al mismo, por lo 
+que a veces ni siquiera es viable estimar $F$.
+Pero aún en los casos en que $F$ es conocida o 
+estimable, si $n$ es grande, la fórmula de $F_n^*$ puede 
+resultar prácticamente inmanejable. En una línea de trabajo similar a la que aporta el Teorema 
+Central del Límite en la estadística de valores 
+medios, un teorema nos va a permitir aproximar 
+$F_n^*$ por distribuciones más sencillas. Este es el 
+Teorema de Fischer-Tippet-Gnedenko (FTG, para 
+abreviar) que presentaremos en breve.
+
+
+Como $X_1,...,X_n$ iid, definimos 
+$Y_i = -X_i$ para todo valor de $i$, entonces $Y_1,...,Y_n$ iid y
+además
+$min(X_1,...,X_n) = - max(Y_1,...,Y_n)$
+la teoría asintótica de los mínimos de datos iid
+se reduce a la de los máximos, razón por la que 
+nos concentramos aquí en estudiar el 
+comportamiento asintótico de los máximos 
+exclusivamente.
+
+\newpage
+
+### Definición 1: Las distribuciones extremales
+
+Las distribuciones extremales son tres: la
+distribución de Gumbel; la distribución de Weibull; 
+la distribución de Fréchet.
+
+#### Distribución de Gumbel
+
+
+
+
+Se dice que una variable tiene distribución de 
+Gumbel si su distribución es: 
+
+$$ \Lambda(x) = exp\{-e^{-x}\} \quad\text{para todo}\; x \;\text{real} $$
+
+Cuando tomamos los máximos de variables no acotadas pero que tienen colas livianas (ej. la distribución tiene probabilidades muy bajas de tomar valores lejos de la media) los mismos convergen a una distribución asintótica extremal de Gumbel.
+
+Para simular distribuciones de Gumbel, utilizamos el paquete __evd__ de @evd y en particular la función __pgumbel__. Partiendo de una simulación de números aleatorios, para un secuencia de 1000 números entre $[-10,10]$, se tienen las siguientes figuras \@ref(fig:gumbel_plots)  relativas a la CDF y PDF de la distribución Gumbel. 
+ 
+
+
+
+
+```{r gumbel_plots, fig.cap="CDF and PDF for Gumbel distribution.", echo=FALSE, ,echo=FALSE}
+# Define the sequence of x values
+x_aux <- seq(-10, 10, length = 1000)
+
+# Set up the plotting layout
+par(mfrow = c(3, 1), mar = c(5, 4, 3, 1))
+
+# Plot the cumulative distribution function (CDF) of the Gumbel distribution
+plot(seq(-10, 10, length = 100), pgumbel(q = seq(-10, 10, length = 100), loc = 0, scale = 1), 
+     xlim = c(-10, 10), type = "l", ylab = "F(x)", xlab = "x", main = "Cumulative Distribution Function (CDF)")
+lines(seq(-10, 10, length = 100), pgumbel(q = seq(-10, 10, length = 100), loc = 0, scale = 2), col = "red")
+title(main ="", sub = "Original Gumbel")
+
+# Plot the probability density function (PDF) of the Gumbel distribution
+plot(x_aux, dgumbel(x = x_aux, loc = 0, scale = 1, log = FALSE), xlim = c(-10, 10), type = "l", 
+     ylab = "f(x)", xlab = "x", main = "Probability Density Function (PDF)")
+lines(x_aux, dgumbel(x = x_aux, loc = 0, scale = 2, log = FALSE), col = "red")
+title(main = "")
+
+# Add subtitles to each plot
+title(main = "", sub = "Rescaled Gumbel", col.main = "red", col.sub = "red")
 ```
 
-You can write citations, too. For example, we are using the **bookdown** package [@R-bookdown] in this sample book, which was built on top of R Markdown and **knitr** [@xie2015].
+
+
+Si calculamos el valor esperado y el desvío estandard de estos valores observados y tenemos una muestra lo suficientemente grande, podremos comparar los resultados con los esperados de forma teórica.
+
+```{r}
+# Podemos simular 100 datos aleatorios de una distribución Gumbel
+GumbelAleatorio<-rgumbel(100)
+plot(density(GumbelAleatorio))
+```
+```{r}
+-digamma(1) # Constante de Euler-Mascheroni
+```
+
+```{r}
+mean(rgumbel(1000))
+```
+
+```{r}
+sd(rgumbel(1000))
+```
+
+
+#### Distribución de Weibull
+
+Se dice que una variable tiene distribución de 
+Weibull de orden $\alpha>0$ si su distribución es:
+
+$$\Psi_{\alpha}(x)=\begin{cases}
+exp{-(-x)^{\alpha}} & si\;x<0\\
+1 & \text{en otro caso}
+\end{cases}$$
+Recordemos que cuando tomamos los máximos de las variables $iid$ con un rango acotado, la distribución resultante por la cual se puede aproximar es la de Weibull. En este caso, y en el resto del LAB, exp() y e son la función exponencial. 
+
+Por una única vez, calculemos la distribución de forma “manual” en el R para convencernos de la forma de la función de distribución de Weibull ($\Psi$). Para eso generaremos un vector auxiliar de valores $x$ y la distribución ($F(x)$). En R la definición de la distribución es sutilmente diferente a la que vimos en el teórico (definida para positivos), pero totalmente convertible con dos cambios de signo. La función que calcula la probabilidad de una distribución Weibull es __pweibull()__. Pueden ver la definición de R utilizando help(pweibull) o ?pweibull.En R podemos saber la forma y valores de esta distribución con una función implementada en un paquete base {stats}. La función es pweibull y lleva como argumentos un vector de cuantiles ( q ), un argumento de forma ( shape ) y otro de escala ( scale ). Recordemos que la función plot utiliza 2 argumentos centrales ( x e y ) y podemos fijar los límites del gráfico ( xlim e ylim), el tipo de gráfico ( type) y las etiquetas de los ejes X e Y ( xlab e ylab).
+
+Primero generaremos un vector de numeros auxiliares equiespaciados y lo nombraremos (“x_aux”). Luego definiremos un orden (alpha=α
+) de la Weibull y graficaremos la función.
+
+```{r echo=FALSE}
+x_aux<-seq(-10, 10, length=100)
+alpha<- 2.6 # definimos un alfa cualquiera (>0)
+plot(x_aux, exp(-(-x_aux)^alpha), type="l", log="", ylab="F(X)", xlab="X", main="Distribucion de Weibull") # recordemos que la definimos para X<0, luego vale 1
+points(x_aux, 1-pweibull(-x_aux, shape=alpha, scale=1), col="red")
+abline(v=0)
+```
+Veamos ahora la forma de un par de distribuciones cambiando el parámetro de orden (α
+), que en la función pweibull de R se nombra como shape y que define el orden de la distribución.
+
+```{r echo=FALSE}
+#Veamos ahora la forma de un par de distribuciones cambiando el parámetro de orden (α
+#), que en la función pweibull de R se nombra como shape y que define el orden de la distribución.
+x_aux<- seq(-10,10, length=1000)
+par(mfrow=c(3,1), mar=c(5,4,3,1))
+plot(x_aux, 1-pweibull(q=-x_aux, shape=2, scale=1) ,xlim=c(-5,5), type="l", ylab="F(x)", xlab="x", main="Weibull")
+lines(x_aux, 1-pweibull(q=-x_aux, shape=1.1, scale=1), col="red")
+
+plot(x_aux, dweibull(x=-x_aux, shape=2, scale=1, log = FALSE) ,xlim=c(-5,5), type="l", ylab="f(x)", xlab="x")
+lines(x_aux, dweibull(x=-x_aux, shape=1.1, scale=1, log = FALSE), col="red")
+```
+En R podemos también generar numeros aleatórios (técnicamente pseudo-aleatorios) de una distribución extremal. Estos simuladores de números aleatórios son útiles para comparar contra distribuciones nulas, generar modelos sintéticos para probar algorítmos, etc…
+Para lxs que venimos de la rama mas aplicada, muchas veces nos ayudan a entender como funcionan los modelos y a verificar si nuestra intuición es acertada respecto a la escala de ajuste de los parámetros entre otras útiles. Generaremos 2 series de 1000 números aleatórios con la función rweibull, que tiene como parámetro el número de datos que se necesitan y la forma (shape) de la distribución. Luego haremos un grafico con la densidad empírica (esto es similar a un histograma) de estos vectores.
+
+```{r echo=FALSE}
+#
+randomWeibull1<-rweibull(1000, shape=2)
+randomWeibull2<-rweibull(1000, shape=1.1)
+
+plot(density(randomWeibull1), main="Weibul de una muestra aleatoria")
+lines(density(randomWeibull2),col="red")
+```
+
+
+#### Distribución de Fréchet
+
+Se dice que una variable tiene distribución de 
+Fréchet de orden $\alpha>0$ si su distribución es:
+
+$$
+\Phi_{\alpha}(x)=\begin{cases}
+exp\{-x^{-\alpha}\} & si\;x>0\\
+0 & \text{en otro caso}
+\end{cases}
+$$
+
+
+Esta tercera clase de variables incluyen a las distribuciones no acotadas, pero de colas pesadas. Es decir que tienen una probabilidad alta de presentar valores alejados de la media o la mediana (ej. la Cauchy). En estos casos, la distribución de sus máximos es la Frechet. Grafiquemos esta distribución para dos valores diferentes de $\alpha$.
+
+```{r}
+x_aux<- seq(-10,10, length=1000)
+
+par(mfrow=c(3,1), mar=c(5,4,3,1))
+plot(seq(-10,10,length=100), pfrechet(q=seq(-10,10,length=100), shape=2, scale=1) ,xlim=c(-2,10), type="l", ylab="F(x)", xlab="x", main="Frechet")
+lines(seq(-10,10,length=100), pfrechet(q=seq(-10,10,length=100), shape=1.1, scale=1),col= "red")
+
+plot(x_aux, dfrechet(x=x_aux, shape=2, scale=1, log = FALSE) ,xlim=c(-2,10), type="l", ylab="f(x)", xlab="x")
+lines(x_aux, dfrechet(x=x_aux, shape=1.1, scale=1, log = FALSE), col="red")
+```
+
+.
+
+
+
+
+\newpage
+
+##### Teorema 1: Relaciones entre las versiones standard de las distribuciones extremales
+
+$X$ tiene distribución $\Phi_{\alpha}(x)$ si y sólo si $(-1/X)$ tiene 
+distribución $\Psi_{\alpha}(x)$ si y sólo si $log(X^{\alpha})$ tiene 
+distribución $\Lambda$.
+
+
+##### Teorema 2: Algunos datos de las distribuciones extremales
+##### Parte 1
+Si $X$ tiene distribución $\Lambda^{(\mu,\beta)}$ entonces tiene:
+
+\begin{itemize}
+  \item[a)] Valor esperado: $E(X) = \mu + \beta\gamma$, donde $\gamma$ es la constante de Euler-Mascheroni, cuyo valor aproximado es $0.5772156649$.
+  \item[b)] Moda: $\mu$
+  \item[c)] Mediana: $\mu - \beta \log(\log 2) \approx \mu - 0.36651 \beta$.
+  \item[d)] Desviación estándar: $\beta \pi \sqrt{6} \approx 1.2825 \beta$.
+  \item[e)] Si $X^+ = \max(X,0)$, entonces $E(X+k)$ es finito para todo valor de $k$ natural.
+  \item[f)] Para simular computacionalmente $X$, se puede tomar $U$ uniforme en $(0,1)$ y hacer $X = \mu - \beta \log(-\log U)$.
+\end{itemize}
+
+#### Parte 2
+
+Si $X$ tiene distribución $\Psi_{\alpha}^{(\mu,\beta)}$ entonces tiene: 
+
+\begin{itemize}
+  \item[a)] Valor esperado: $E(X) = \mu + \beta\Gamma(1+1/\alpha)$.
+  \item[b)] Moda: $\mu$ si $\alpha\leq 1$ y $\mu-\beta\{(\alpha-1)/\alpha\}^{(1/\alpha)}$ si $\alpha>1$.
+  \item[c)] Mediana: $\mu - \beta \log(2)^{(1/\alpha)}$.
+  \item[d)] Desviación estándar: $\beta\{\Gamma(1+2/\alpha)-\Gamma(1+1/\alpha)^2\}^{1/2}$.
+\end{itemize}
+
+#### Parte 2
+
+Si $X$ tiene una distribución $\Phi_{\alpha}^{(\mu, \beta)}$ entonces se tiene:
+
+\begin{itemize}
+  \item[a)] Valor esperado: $E(X) = \mu + \beta\Gamma(1-1/\alpha)$ si $\alpha > 1$, $\infty$ en caso contrario.
+  \item[b)] Moda: $\mu + \beta\Gamma(1-1/\alpha)$ si $\alpha>1$.
+  \item[c)] Mediana: $\mu + \beta \log(2)^{(-1/\alpha)}$.
+  \item[d)] Desviación estándar: $\beta|\Gamma(1-2/\alpha)-\Gamma(1-1/\alpha)^2|$ si $\alpha>2$, $\infty$ si $1<\alpha \leq 2$.
+\end{itemize}
+
+
+\newpage
+
+##### Teorema 3: Fischer-Tippet-Gnedenko (FTG)
+
+
+Si $X_1,...,X_n\quad iid$ con distribución $F$ "continua", llamamos $F_n^*$ a la distribución de $max(X_1,...,X_n)$ y $n$ es grande, entonces existen $\mu$ real y $\beta>0$ tales que alguna de las siguientes tres afirmaciones es correcta:
+
+\begin{itemize}
+  \item[1)] $F_n^*$ se puede apromixar por la distribución de $\mu+\beta Y$ con $Y$ variable con distribución $\Lambda$.
+  \item[2)] Existe $\alpha>0$ tal que $F_n^*$ se puede aproximar por la distribución de $\mu+\beta Y$ con $Y$ variable con distribución $\Phi_{\alpha}$. 
+  \item[3)] Existe $\alpha>0$ tal que $F_n^*$ se puede aproximar por la distribución de $\mu+\beta Y$ con $Y$ variable con distribución $\Phi_{\alpha}$.
+\end{itemize}
+
+Lo anterior equivale a decir que la distribución del máximo de datos \textit{continuos} e $iid$, si $n$ es grande, puede aproximarse por una Gumbel, una Fréchet o una Weibull. Una aproximación será válida dependiendo de la distribución de $F$. En este sentido, cuando $F$ sea normal entonces $F_n^*$ se puede aproximar como una Gumbel. Cuando $F$ sea uniforme, se puede aproximar $F_n^*$ como una Weibull y cuando $F$ sea Cauchy entonces $F_n^*$ se puede aproximar por una Fréchet. 
+
+Más precisamente, cuál de las tres aproximaciones es la aplicable depende de la cola de $F$ (los valores de $F(t)$ para valores grandes de $t$).
+En concreto, Weibull aparece cuando $F$ es la distribución de una variable acotada por arriba (como la Uniforme), Gumbel para distribuciones de variables no acotadas por arriba pero con colas muy livianas (caso Exponencial y Normal) y Fréchet para colas pesadas (caso Cauchy)\footnote{Si bien  la hipótesis de continuidad de $F$ no es esencial, si $F$ tiene
+la distribución Binomial o Poisson, por ejemplo, no se puede aplicar ninguna de las tres aproximaciones anteriores.}.
+
+Como consecuencia del $FTG$ cuando se tengan datos máximos, las distribuciones maximales podrían ser candidatas de uno de los ajustes si
+
+\begin{itemize}
+\item la cantidad de registros es lo suficientemente grande
+\item los registros son $iid$ aunque con versiones más generales del $FTG$ este supuesto puede no cumplirse
+\end{itemize}
+
+Como la mayoría de tests de ajustes suponen datos $iid$, se van a realizar dos tests de aleatoriedad\footnote{En inglés se expresa como \textit{randomness}} a los datos:
+
+\begin{itemize}
+\item  Runs up and down 
+\item  Spearman correlation of ranks 
+\end{itemize}
+
+Se emplea la prueba de ajuste $\chi^2$ que requiere seleccionar una partición más o menos arbitraria de la recta real de intervalos siendo importante que en cada intervalo haya una cantidad lo suficientemente importante de datos de la muestra. En este sentido, se pueden tomar como extremos de los intervalos los quintiles empíricos de la muestra. Cabe mencionar que este test requiere estimar parámetros por el método de Máxia Verosimilitud Categórica.
+
+Cabe mencionar que para este estudio la distribución de la variable a incorporar en este estudio no tiene que ser degenerada, es decir $H(t)=0$ ó $H(t)=1$.
+
+\newpage
+
+### Definición 2: Distribución extremal asintótica
+
+Si $X_1,...,X_n$  es $iid$ con distribución $F$ diremos que $H$ no-degenerada es la Distribución Extremal Asintótica (DEA) de $F$\footnote{Lo que equivale a decir que $F$ tiene $DEA\;H$.}, si existen dos sucesiones de números reales, $d_n$ y $c_n>0$, tales que la distribución de
+
+\begin{equation}
+\frac{max(X_1,...,X_n)- d_n}{c_n}\label{eq:max}
+\end{equation}
+
+tiende a $H$ cuando $n$ tiende a infinito.
+
+
+### Definición 3: Supremo esencial de una variable aleatoria o distribución
+
+Si $X$ tiene distribución $F$, se llama supremo esencial de $X$, denotado como $M_X$ o, indistintamente, supremo esencial de $F$, denotado $MF$ a
+
+\begin{equation}
+M_X=M_F= sup\{t / F(t)<1\}\label{eq:Mx}
+\end{equation}
+
+Observación:
+\begin{itemize}
+\item Si $F$ es $U(a,b)$, $M_F=b$
+\item Si $F$ es $Bin(m,p)$, $M_F=m$
+\item Si $F$ es Normal, Exponencial, Cauchy o Poisson, $M_F$ es infinito.
+\end{itemize}
+
+##### Teorema 4
+
+Si $X_1,...,X_n$ es $iid$ con distribución $F$ cualquiera, entonces, para $n$ tendiendo a infinito,
+
+\begin{equation}
+X^*_n=M_F= max(X_1,...,X_n)\;tiende\;a\;M_F\label{eq:Xast}
+\end{equation}
+
+Observación:
+
+El resultado anterior vale incluso si $M_F$ es infinito, pero si $M_F$ es finito, como $X^*n - M_F$ tiende a cero, por analogía con el Teorema Central del Límite para promedios, buscaríamos una sucesión $c_n>0$ y que tienda a cero de modo tal que $(X^*n- M_F )/ c_n$ tienda a una distribución no-degenerada y de allí surge buscar la DEA.
+
+
+##### Teorema 5
+
+
+Si $F$ es una distribución con $M_F$ finito, y para $X$ con distribución $F$ se cumple que
+
+$$
+P(X=M_F)>0 
+$$
+
+entonces $F$ NO admite DEA.
+
+Observación:
+
+Si $F$ es $Bin(m,p)$, $M_F=m$. Si $X$ tiene distribución $F$, entonces
+$P( X=M_F)= P( X=m)= p_m>0$,
+asi que la distribucion $Bin(m,p)$ NO admite DEA, no se puede aproximar la distribución del máximo de una muestra $iid$ de variables $Bin(m,p)$.
+
+El Teorema anterior es un caso particular del próximo.
+
+
+##### Teorema 6
+
+Si $F$ es una distribución con $M_F$ finito o infinito que admite DEA, y $X$ tiene distribución $F$, entonces el límite cuando $t$ tiende a $M_F$ por izquierda de
+$P(X>t)/P(X \geq t)$ debe ser 1.
+
+
+Observación:
+
+\begin{itemize}
+\item Si $F$ es una distribución de Poisson de parámetro $\lambda>0$, $M_F$ es infinito. 
+\item Si $k$ es un natural, entonces:
+\begin{eqnarray}
+\frac{P(X>k)}{P(X\geq k)} &=& \frac{P(X \geq k+1)}{P(X\geq k)} \\ \nonumber
+&=& 1-\frac{P(X=k)}{P(X \geq k)} \approx 1-\left(1- \frac{\lambda}{k}\right) 
+\end{eqnarray}
+que tiende a $0$ cuando $k$ tiende a infinito, por lo cual $F$ NO admite DEA, o sea que no se puede aproximar el máximo de una sucesión $iid$ de variables de Poisson.
+\end{itemize}
+
+Observación:
+
+El Teorema 6 brinda una condición NECESARIA pero NO SUFICIENTE para DEA. Un ejemplo de ello lo aportó Von Mises, mostrando que la distribución
+
+$$F(x)= 1- e^{(-x-sen(x))}$$
+cumple con la condicion del Teorema 6 pero no admite DEA.
+
+### Definición 4: Distribución max-estables
+
+Si dada una $F$ distribución, $X$ con distribución $F$, $k$ natural arbitrario y $X_1,...,X_k$ es $iid$ con distribución $F$, existen reales $a_k$, $b_k$ tales que $max(X_1,...,X_k)$ tiene la misma distribución que $a_k X+ b_k$, $F$ se dice \textit{max-estable}.
+
+El Teorema FTG resulta de superponer los dos siguientes teoremas:
+
+##### Teorema 7
+
+\begin{itemize}
+  \item[a)] Si $F$ admite $DEA\;H$, entonces $H$ es max-estable.
+  \item[b)] Si $H$ es max-estable, es la DEA de sí misma.
+\end{itemize}
+
+##### Teorema 8
+
+Una distribución es max-estable si y solo si es extremal\footnote{O sea Gumbel, Weibull o Fréchet}.
+El Teorema 7 es bastante intuitivo y análogo a los teoremas de Lévy sobre distribuciones estables en aproximaciones asintóticas de las distribuciones de sumas. Para el Teorema 8 haremos enseguida un ejercicio sencillo que nos ayudará a hacerlo creíble.
+Luego precisaremos, para terminar con esta parte, cómo son las distribuciones que tienen por DEA cada uno de los tres tipos de distribuciones extremales. Para eso precisamos recordar algunas definiciones, como la siguiente.
+
+
+Obsrvación:
+
+Si $F$ y $G$ son dos distribuciones, tienen colas equivalentes si $M_F=M_G$ y cuando $t$ tiende a $M_F$ por izquierda, $(1-F(t))/(1-G(t))$ tiende a un valor $c>0$.
+Recordando ahora cómo se calcula la distribución del máximo de dos variables independientes, es muy sencillo calcular la distribución del $max\{X,Y\}$, cuando $X$ e $Y$ son independientes y cada una de ellas es una distribución extremal. 
+
+Se tiene el siguiente resultado:
+
+| $X$ | $Y$| $max(X,Y)$ |
+|-------|-------|--------------|
+| \textcolor{red}{Weibull} | \textcolor{red}{Weibull} | \textcolor{red}{Weibull} |
+| \textcolor[rgb]{0.0,0.5,0.0}{Weibull} | \textcolor[rgb]{0.0,0.5,0.0}{Gumbel} | \textcolor[rgb]{0.0,0.5,0.0}{Cola equivalente Gumbel} |
+| \textcolor{blue}{Weibull} | \textcolor{blue}{Fréchet} | \textcolor{blue}{Fréchet} |
+| \textcolor[rgb]{0.0,0.5,0.0}{Gumbel} | \textcolor[rgb]{0.0,0.5,0.0}{Weibull} | \textcolor[rgb]{0.0,0.5,0.0}{Cola equivalente Gumbel} |
+| \textcolor{red}{Gumbel} | \textcolor{red}{Gumbel} | \textcolor{red}{Gumbel} |
+| \textcolor{blue}{Gumbel} | \textcolor{blue}{Fréchet} | \textcolor{blue}{Cola equivalente Fréchet} |
+| \textcolor{blue}{Fréchet} | \textcolor{blue}{Weibull} | \textcolor{blue}{Fréchet} |
+| \textcolor{blue}{Fréchet} | \textcolor{blue}{Gumbel} | \textcolor{blue}{Cola equivalente Fréchet} |
+| \textcolor{red}{Fréchet} | \textcolor{red}{Fréchet}| \textcolor{red}{Fréchet} |
+
+
+\textcolor{red}{\rule{1em}{1em} Las extremales son max-estables: tomar máximos de dos del mismo tipo queda en el mismo tipo.}
+
+
+\textcolor[rgb]{0.0,0.5,0.0}{\rule{1em}{1em} Gumbel es más pesada que Weibull. En la cola, que es lo que cuenta para máximos, prima Gumbel.}
+
+
+\textcolor{blue}{\rule{1em}{1em} Fréchet es más pesada que Gumbel y mucho más pesada que Weibull.}
+\vspace{1cm}
+
+Además, de la tabla se deduce que 
+
+##### Teorema 9 
+
+Si $X_1,...,X_n$ independientes y cada $X_i$ tiene uno de los tres tipos de distribución extremal, entonces la distribución del $max(X_1,...,X_n)$ es:
+\begin{itemize}
+\item[a)] Cola equivalente a Fréchet, si alguna de las variables es Fréchet y alguna otra es Gumbel.
+\item[b)]  Fréchet, si alguna es Fréchet y ninguna es Gumbel.
+\item[c)]  Cola equivalente Gumbel ninguna es Fréchet pero algunas son Gumbel y otras Weibull.
+\item[d)] Gumbel si todas son Gumbel.
+\item[e)]  Weibull si todas son Weibull.
+\end{itemize}
+
+Observación:
+
+Si $F$ es una distribución, se dice que tiene \textit{cola de variación regular de orden} $-\alpha$, para $\alpha \geq 0$, si para todo $t>0$, $(1-F(tx))/(1-F(x))$ tiende
+a $t^{-\alpha}$ si $x \rightarrow  \infty$. Para abreviar se dirá que $F$ es $R_{-\alpha}$. Por ejemplo, para $\alpha=3$, un caso de una tal $F$ es $F(u)=1- 1/u^3$.
+
+
+Por otra parte se dice que $L$ es una \textit{función de variación lenta} si, para todo $t>0$, $L(tx)/L(x)$ tiende a 1 cuando $x \rightarrow  \infty$. Por ejemplo, $L(u)=log(u)$.
+
+\newpage
+
+### Definición 4: Dominio de atracción maximal
+
+Si $H$ es una distribución extremal (Gumbel, Weibull o Fréchet) su Dominio de Atracción Maximal ($DAM(H)$) está constituído por todas las distribuciones $F$ que tienen $DEA\;H$.
+
+##### Teorema 9: DAM de la Fréchet
+
+$F$ pertenece a la DAM de $\Phi_{\alpha}$ si y sólo si
+$1-F(x)=x-\alpha L(x)$ para alguna $L$ de variación lenta,
+lo cual es equivalente a decir que $F$ es $R_{-\alpha}$.
+
+
+##### Corolario 1: DAM de la Fréchet
+Si $F$ es una distribución con densidad $f$ que cumple que $xf(x)/(1-F(x))$ tiende a $\alpha$ cuando $x \rightarrow  \infty$
+se dice que $F$ cumple la Condición de Von Mises I. En tal caso, $F$ pertenece a la DAM de $\Phi_{\alpha}$ y mas aún, la DAM de $\Phi_{\alpha}$ son todas las distribuciones que tienen cola equivalente a alguna distribución que cumpla la Condición de Von Mises I.
+Del DAM Fréchet y Teorema 1, surge lo siguiente.
+
+
+##### Teorema 10: DAM de la Weibull
+\begin{itemize}
+\item [a)] $F$ pertenece a la DAM de $\Psi_{\alpha}$ si y solo si $M_F$ es finito y además $$1-F(M_F -1/x)=x^{-\alpha} L(x)$$ para alguna
+$L$ de variación lenta, es decir que pertenece a $R_{-\alpha}$. Observar que con el cambio de variable $u=M_F -1/x$,
+resulta que $1-F(u)=(^{-}MF -u)^{\alpha} L(1/(M_F -u))$ para alguna $L$ de variación lenta, para $u< M_F$. Además puede tomarse $d_n= M_F$ y $c_n= n-\alpha$.
+\item [b)] Si $F$ distribución con densidad $f$ positiva en $(a,M_F)$ para algun $a< M_F$ y $(M_F -x)f(x)/(1-F(x))$ tiende a $\alpha$ cuando $x\rightarrow M_F$, se dice que $F$ cumple la Condición de Von Mises II. En tal caso $F$ pertenece a la DAM de $\Psi_{\alpha}$ y mas aún, la DAM de $\Psi_{\alpha}$ son todas las distribuciones que tienen cola equivalente a alguna distribución que cumpla la Condición de Von Mises II.
+\end{itemize}
+
+##### Teorema 11: DAM de la Gumbel
+
+
+Una distribución $F$ se dice una Función de Von Mises con función auxiliar $h$ si existe $a < M_F$ ($M_F$ puede ser finito o infinito) tal que para algún $c>0$ se tiene
+
+$$
+1-F(x)= c\;exp^{{- \int_a^X \frac{1}{h(t)} dt}},
+$$
